--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,26 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+/*
 
     You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
+
+
+    ...Or you can use the import command to include
     other sylesheets into your bunde as well, e.j:
-    
+
     import 'relative/path/to/stylesheet.scss';
 
 */
+body {
+    margin-top: -10px;
+    padding: 0;
+}
+
+.card {
+    width: 18rem;
+}
+
+.dankbg {
+    background-image: url("https://images.fineartamerica.com/images-medium-large-5/pack-of-spotted-hyenas-crocuta-crocuta-william-ervinscience-photo-library.jpg");
+    background-size: cover;
+}
